--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js"
+    "start": "nodemon app.js"
    },
   "keywords": [],
   "author": "",
@@ -14,7 +13,7 @@
     "bootstrap": "^5.3.3",
     "lodash": "^4.17.21"
   },
-  "devDependencies": {
+  "devDependencies": { 
     "nodemon": "^3.1.0"
   }
 }
